istio/serviceEntry/belloga-service-entry.yaml
# https://nangman14.tistory.com/60
# https://intrepidgeeks.com/tutorial/istio-service-entry
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-star-aws-services-https
spec:
  hosts:
    - "*.amazonaws.com"
    - "openapi.naver.com"
    - "*.google.com"
  location: MESH_EXTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: tls
      protocol: TLS
    - number: 3306
      name: mysql-tcp
      protocol: TCP

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-star-aws-services-https
spec:
  hosts:
    - "*.amazonaws.com"
  tls:
    - match:
        - port: 443
          sniHosts:
            - "*.amazonaws.com"
      route:
        - destination:
            host: "*.amazonaws.com"
            port:
              number: 443
